[package]
name = "example-build"
version = "0.0.1"
authors = ["Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = { path = "../progenitor-client" }
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "61474f422caa6f9f843ae3a5bf656b5b3f507241", features = ["json", "stream"] }
#reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[build-dependencies]
progenitor = { path = "../progenitor" }
serde_json = "1.0"
