[package]
name = "progenitor-client"
version = "0.1.2-dev"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/progenitor.git"
description = "An OpenAPI client generator - client support"

[dependencies]
bytes = "1.2.1"
futures-core = "0.3.24"
percent-encoding = "2.1"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "61474f422caa6f9f843ae3a5bf656b5b3f507241", features = ["json", "stream"] }
#reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
